--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,24 @@ android {
 		versionName "0.1.0"
 	}
 
+	signingConfigs {
+		debug {
+			storeFile file("../debug.keystore")
+			storePassword "lunardebug"
+			keyAlias "android"
+			keyPassword "lunardebug"
+		}
+	}
+
 	buildTypes {
 		release {
 			minifyEnabled false
+			proguardFiles 'proguard-rules.pro'
+		}
+
+		debug {
+			minifyEnabled false
+			applicationIdSuffix '.debug'
 			proguardFiles 'proguard-rules.pro'
 		}
 	}
