--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 allprojects {
 	repositories {
 		jcenter()
+		maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 	}
 }
 
@@ -58,5 +59,5 @@ ext {
 	        timber              : 'com.jakewharton.timber:timber:4.1.2',
 
 	        greenDao            : 'de.greenrobot:greendao:2.1.0',
-	        lunarView           : 'com.coolerfall:android-lunar-view:1.0.1']
+	        lunarView           : 'com.coolerfall:android-lunar-view:1.0.2-SNAPSHOT']
 }
