--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 		classpath 'com.android.tools.build:gradle:2.1.2'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 		classpath 'me.tatarka:gradle-retrolambda:3.2.5'
+		classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
 		classpath 'com.squareup.sqldelight:gradle-plugin:0.4.4'
 
 		configurations.classpath.exclude group: 'com.android.tools.external.lombok'
