--- a/build.gradle
+++ b/build.gradle
@@ -1,64 +1,58 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-	repositories {
-		jcenter()
-	}
-	dependencies {
-		classpath 'com.android.tools.build:gradle:2.1.2'
-		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-		classpath 'me.tatarka:gradle-retrolambda:3.2.5'
-		classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
-		classpath 'com.squareup.sqldelight:gradle-plugin:0.4.4'
+  repositories {
+    jcenter()
+    google()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:3.0.0'
+    classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.51'
+    classpath 'com.squareup.sqldelight:gradle-plugin:0.6.1'
+  }
+}
 
-		configurations.classpath.exclude group: 'com.android.tools.external.lombok'
-	}
+plugins {
+  id "org.jetbrains.kotlin.kapt" version "1.1.4-3"
 }
 
 allprojects {
-	repositories {
-		jcenter()
-		maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-	}
+  repositories {
+    jcenter()
+  }
 }
 
 task clean(type: Delete) {
-	delete rootProject.buildDir
+  delete rootProject.buildDir
 }
 
 ext {
-	versions = [compileSdk: 24,
-	            buildTools: '24.0.0',
-	            minSdk    : 15,
-	            targetSdk : 23]
+  compileSdkVersion = 26
+  buildToolsVersion = '26.0.2'
 
-	libs = [supportv4           : 'com.android.support:support-v4:24.0.0',
-	        appcompatv7         : 'com.android.support:appcompat-v7:24.0.0',
-	        design              : 'com.android.support:design:24.0.0',
-	        recyclerview        : 'com.android.support:recyclerview-v7:24.0.0',
-	        palette             : 'com.android.support:palette-v7:24.0.0',
-	        supportAnnotation   : 'com.android.support:support-annotations:24.0.0',
+  minSdkVersion = 15
+  targetSdkVersion = 26
 
-	        dagger              : 'com.google.dagger:dagger:2.5',
-	        daggerCompiler      : 'com.google.dagger:dagger-compiler:2.5',
-	        javaxAnnotation     : 'org.glassfish:javax.annotation:10.0-b28',
-	        rxJava              : 'io.reactivex:rxjava:1.1.6',
-	        rxAndroid           : 'io.reactivex:rxandroid:1.2.1',
-	        retrofit2           : 'com.squareup.retrofit2:retrofit:2.1.0',
-	        adapterRxJava       : 'com.squareup.retrofit2:adapter-rxjava:2.1.0',
-	        converterMoshi      : 'com.squareup.retrofit2:converter-moshi:2.1.0',
-	        okHttp3             : 'com.squareup.okhttp3:okhttp:3.3.1',
-	        loggingInterceptor  : 'com.squareup.okhttp3:logging-interceptor:3.3.1',
+  kotlinLib = 'org.jetbrains.kotlin:kotlin-stdlib-jre7:1.1.51'
+  anko = 'org.jetbrains.anko:anko-sdk15:0.10.2'
+  ankoAppcompatV7 = 'org.jetbrains.anko:anko-appcompat-v7:0.10.2'
 
-	        autoValue           : 'com.google.auto.value:auto-value:1.2',
-	        autoValueAnnotations: "com.jakewharton.auto.value:auto-value-annotations:1.2-update1",
-	        moshi               : 'com.squareup.moshi:moshi:1.2.0',
-	        sqlbrite            : 'com.squareup.sqlbrite:sqlbrite:0.6.3',
-	        butterKnife         : 'com.jakewharton:butterknife:8.0.1',
-	        butterKnifeCompiler : 'com.jakewharton:butterknife-compiler:8.0.1',
-	        phrase              : 'com.squareup.phrase:phrase:1.1.0',
-	        timber              : 'com.jakewharton.timber:timber:4.1.2',
+  supportAnnotations = 'com.android.support:support-annotations:25.3.1'
+  appcompatV7 = 'com.android.support:appcompat-v7:25.3.1'
 
-	        greenDao            : 'de.greenrobot:greendao:2.1.0',
-	        lunarView           : 'com.coolerfall:android-lunar-view:1.0.2-SNAPSHOT']
+  javaxInject = 'javax.inject:javax.inject:1'
+  javaxAnnotations = 'org.glassfish:javax.annotation:10.0-b28'
+  dagger = 'com.google.dagger:dagger:2.12'
+  daggerCompiler = 'com.google.dagger:dagger-compiler:2.12'
+  daggerAndroid = 'com.google.dagger:dagger-android:2.12'
+  daggerAndroidSupport = 'com.google.dagger:dagger-android-support:2.12'
+
+  rxjava2 = 'io.reactivex.rxjava2:rxjava:2.1.6'
+  rxAndroid2 = 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  sqlbrite2 = 'com.squareup.sqlbrite2:sqlbrite:2.0.0'
+
+  butterKnife = 'com.jakewharton:butterknife:8.8.1'
+  butterKnifeCompiler = 'com.jakewharton:butterknife-compiler:8.8.1'
+  timber = 'com.jakewharton.timber:timber:4.1.2'
+  phrase = 'com.squareup.phrase:phrase:1.1.0'
+
+  lunarView = 'com.coolerfall:android-lunar-view:1.0.1'
 }
